読み込み画面追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <main>
+      <div class="warn">
+        辞書を読込中です。しばらくお待ち下さい...
+      </div>
+
       <div class="input">
         <input type="text" id="search" />
         <button id="search-button">検索</button>
