--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
       </div>
 
       <div class="input">
+        <!--<textarea id="translate-japanese"></textarea>
+        <textarea id="translate-imish"></textarea>-->
+      </div>
+
+      <div class="input">
         <input type="text" id="search" />
         <button id="search-button">検索</button>
       </div>
+
       <div id="result"></div>
     </main>
 
